chore: Update Vaadin version to 8.27.4 chore: Refactor UI Unit Test naming and commenting convention to be more behavioral feat: Add missing key shortcuts